<resources>
    <string name="app_name">PDA Demo</string>
    <string name="strDirectOutput">直接填充</string>
    <string name="strAnalogOutput">模拟键输出</string>
    <string name="strBordcastOutput">广播输出</string>
    <string name="strScan">扫描</string>
    <string name="strClear">清除</string>
    <string name="strScanMode">扫描模式:</string>
    <string name="strScanFunc">扫描功能:</string>
    <string name="strOn">开启</string>
    <string name="strOff">关闭</string>
    <string name="strTrigMode">触发模式:</string>
    <string name="strNormalTrig">普通触发</string>
    <string name="strContinueTrig">连续扫描</string>
    <string name="strOverTimeTrig">超时扫描</string>
    <string name="strScanAutoent">自动换行:</string>
    <string name="strScanSoundNotice">声音提示:</string>
    <string name="strScanVibratesNotice">震动提示:</string>
    <string name="strScanLEDNotice">指示灯提示:</string>
    <string name="strReset">恢复默认设置</string>
    <string name="strScanDemo">Scan</string>
    <string name="strAimidDemo">Code Type</string>
    <string name="strNFCDemo">NFC Demo</string>
    <string name="strScanResult">Scan Result:</string>
    <string name="strBarCode1">BarCode1:</string>
    <string name="strBarCode2">BarCode2:</string>
    <string name="strBarCodeType">BarCodeType:</string>
    <string name="strBarCodeName">BarCodeName:</string>
    <string name="strNfcComment">请将NFC卡片贴近设备背面</string>
    <string name="strNotSupportNFC">设备不支持NFC！</string>
    <string name="strSetupOpenNFC">请在系统设置中先启用NFC功能！</string>
    <string name="nfcCardType">卡片类型:</string>
    <string name="nfcAll">\n共</string>
    <string name="nfcSectors">个扇区</string>
    <string name="nfcSector">Sector</string>
    <string name="nfcBolcks">个块</string>
    <string name="nfcBolck">Block</string>
    <string name="nfcStorageSpace">\n存储空间:</string>
    <string name="nfcByte">B\n</string>
    <string name="nfcVerifySuccessful">:验证成功\n</string>
    <string name="nfcVerifyFail">:验证失败\n</string>
    <string name="nfcN">\n</string>
    <string name="strlblQR">QR Code</string>
    <string name="strlblEnableQR">Enable QR</string>
    <string name="strlblMinLen">Min Length:</string>
    <string name="strOK">OK</string>
    <string name="strCancel">Cancel</string>
    <string name="strlblQRMaxLen">Max Length:</string>
    <string name="strSymbology">Symbology</string>
</resources>
